Fixed bug on TT camping page where text on the right had side was cut off on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1737,7 +1737,7 @@ hr {
     }
 
     #tt-welcome {
-        width: 100%;
+        width: 90%;
         margin-top: 0px;
         border-radius: 0px;
     }
